# Lightweight-LLM-System-to-Generate-an-Improved-Cryptography-Algorithm-V2

./: .env  .env.example  .gitignore  AlgorithmsBlock.py  Components.py  Makefile  README.md  conftest.py  dataset_card.md  environment.yml  instructions.txt  pyproject.toml  requirements.txt
Docs/: advanced_evaluation.md
algorithms/: CAST-128.md  DES.md  GIFT.md  HIGHT.md  LEA.md  PRESENT.md  RC5.md  SIMON.md  SPECK.md  Serpent.md  TEA.md  XTEA.md
app/: streamlit_app.py
cipherlab/: config.py  context_logger.py  iteration.py
cipherlab/cipher/: builder.py  components_builtin.py  cryptanalysis.py  spec.py  (+4 more)
components/: architectures.md  sboxes.md
crypto_cipher_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
evaluation/: avalanche.md
gradio_explainer_ui/: app.py
kb/: 00_scope_and_safety.md  01_block_cipher_design_principles.md  02_spn_architecture.md  03_feistel_architecture.md  04_component_metadata_and_interfaces.md  05_evaluation_heuristics.md  06_catalog_of_reference_ciphers.md  07_thesis_notes_rag_usage.md  08_hybrid_retrieval.md  09_cryptanalysis_tests.md  10_reproducibility.md  11_dataset_design_for_tuning.md
kb_index/: bm25.json  chunks.jsonl
legacy/: Components.py
scripts/: build_kb_index.py  build_sft_dataset.py  check_finetune_status.py  finetune_openai.py  generate_sft_dataset.py  ingest_external_kb.py  run_benchmarks.py  test_finetuned_model.py
tests/: conftest.py  test_dataset_generation.py  test_docs_surface.py  test_gradio_explainer.py  test_iteration.py  test_provider_fallback.py  test_rag_local.py  test_roundtrip.py
(+48 files in other folders)
